--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "20.5.7",
+    "@types/node": "^20.9.0",
     "@vercel/postgres": "^0.5.0",
+    "are-we-there-yet": "^4.0.2",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
-    "next": "^14.0.2",
+    "gauge": "^5.0.2",
+    "inflight": "^1.0.6",
+    "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "npmlog": "^7.0.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rimraf": "^5.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.1",
